assets/scss/custom.scss
@font-face {
  font-family: 'Archive Regular';
  font-style: normal;
  font-weight: 400;
  src: local('Archive Regular'), url('/fonts/Archive-Regular.woff');
}

.social-icons {
  display: flex;
  justify-content: center;
}

.fa-brands {
  margin: 10px;
}

.navbar .navbar-nav .nav-link.active {
  color: #FB0102 !important;
}

.btn-primary {
  background-color: #fb0102 !important;
  border-color: #fb0102 !important;
}

.hero-cta-alt {
  color: #b3b3b3 !important;
}

.fa-brands {
  color: #b3b3b3 !important;
}

.logo-container {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 20px;
  flex-wrap: wrap;
  text-align: center;
  padding: 20px 0;
  
  & > * {
    flex: 0 1 auto;
    display: flex;
    justify-content: center;
    align-items: center;
  }
}

.logo-container img {
  max-height: 100px;
  object-fit: contain;
  margin: 0 20px;
}

#partners {
  padding: 55px 0px;
}

@keyframes slide {
  from {
    transform: translateX(0);
  }
  to {
    transform: translateX(-100%);
  }
}

.logos {
  overflow: hidden;
  padding: 60px 0;
  white-space: nowrap;
  position: relative;
  display: inline-flex;
}

.logos:before,
.logos:after {
  position: absolute;
  top: 0;
  width: 250px;
  height: 100%;
  content: "";
  z-index: 2;
}

.logos:before {
  left: 0;
  background: linear-gradient(to left, rgba(255, 255, 255, 0), #f7f7f7);
}

.logos:after {
  right: 0;
  background: linear-gradient(to right, rgba(255, 255, 255, 0), #f7f7f7);
}

.logos:hover .logos-slide {
  animation-play-state: paused;
}

.logos-slide {
  display: flex;
  animation: 35s slide infinite linear;
  align-items: center;
  width: max-content;
}

.logos-slide a {
  margin: 0 40px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.logo-image {
  height: 80px;
  width: auto;
  object-fit: contain;
  min-width: 100px;
}

.logo-image-partner {
  height: auto;
  width: 350px;
  object-fit: contain;
}

.logo-section h3 {
  text-align: center;
}

